assets/css/main.css
/* ... */
  .nav .nav-best {
    display: none;
    float: right;
    background-color: #f9d426;
    background-image: url("../img/icon-best.png");
    background-repeat: no-repeat;
    background-position: 11px 13px;
    height: 53px;
    width: 53px; }
    @media (max-width: 767px) {
      .nav .nav-best {
        display: block;
      }
    }
  .nav .nav-auth {
    display: inline-block;
    color: #2669b5;
    font-size: 15px;
    font-weight: 700;
    text-transform: uppercase;
    background-color: #dfeeff;
    height: 53px;
    width: 220px;
    text-decoration: none;
    padding: 17px 15px 0 50px;
    position: relative; }
    @media (max-width: 767px) {
      .nav .nav-auth {
        width: calc(100% - 53px); } }
    @media (min-width: 768px) and (max-width: 880px) {
      .nav .nav-auth {
        width: 100%; } }
    .nav .nav-auth .icon-auth {
      width: 19px;
      height: 29px;
      background: url("../img/icon-auth.png");
      position: absolute;
      left: 19px;
      top: 11px; }
    .nav .icon-user {
      width: 25px;
      height: 30px;
      background: url("../img/icon-user.png");
      position: absolute;
      left: 19px;
      top: 11px; }
  .nav .best-dropdown {
    display: none;
    cursor: default;
    top: 53px;
    position: absolute;
    right: 0; }
  .nav .auth-dropdown {
    display: none;
    cursor: default;
    width: 220px;
    top: 53px;
    position: absolute;
    left: 0;
    background-color: #dfeeff;
    border-bottom: 2px solid #ccddf0; }
    @media (max-width: 767px) {
      .nav .auth-dropdown {
        width: 100%; } }
    .nav .auth-dropdown.opened {
      z-index: 1;
      display: block; }
    .nav .auth-dropdown .toogle-block {
      width: 180px;
      margin: 10px auto 15px auto; }
      @media (max-width: 767px) {
      .nav .auth-dropdown .toogle-block {
        text-align: center; } }
      .nav .auth-dropdown .toogle-block .toggle-link {
        font-weight: 700;
        display: block;
        position: relative; }
        .nav .auth-dropdown .toogle-block .toggle-link .tr {
          content: "";
          width: 0;
          height: 0;
          position: absolute;
          top: 7px;
          margin-left: 5px;
          border-style: solid; }
        .nav .auth-dropdown .toogle-block .toggle-link.tr-close:after {
          content: "";
          width: 0;
          height: 0;
          position: absolute;
          top: 7px;
          margin-left: 5px;
          border-style: solid;
          border-width: 6px 5px 0 5px;
          border-color: #2d588a transparent transparent transparent;
          -webkit-transform: rotate(180deg);
          -ms-transform: rotate(180deg);
          transform: rotate(180deg);
          -webkit-transition: all 0.15s ease-in-out;
          transition: all 0.15s ease-in-out; }
        .nav .auth-dropdown .toogle-block .toggle-link.tr-open:after {
          content: "";
          width: 0;
          height: 0;
          position: absolute;
          top: 7px;
          margin-left: 5px;
          -webkit-transition: all 0.15s ease-in-out;
          transition: all 0.15s ease-in-out;
          border-style: solid;
          border-width: 6px 5px 0 5px;
          border-color: #2d588a transparent transparent transparent; }
    .nav .auth-dropdown form {
      display: block;
      width: 180px;
      margin: 0 auto;
      padding: 10px 0 20px 0; }
      @media (max-width: 767px) {
        .nav .auth-dropdown form {
          text-align: center;
          width: 100%; } }
      .nav .auth-dropdown form .btn {
        width: 180px;
        height: 40px;
        padding-left: 0px;
        padding-right: 0px; }
        @media (max-width: 767px) {
          .nav .auth-dropdown form .btn {
            margin: 15px auto 0 auto; } }
        .nav .auth-dropdown form .btn.disabled {
          opacity: .3;
          cursor: default; }
          .nav .auth-dropdown form .btn.disabled:hover {
            background-color: #2d598a;
            color: #ffffff; }
      .nav .auth-dropdown form input {
        border: none;
        height: 40px;
        font-weight: 700;
        width: 180px;
        margin: 0 0 4px 0;
        padding: 0px 10px;
        color: #333;
        outline: none; }
        @media (max-width: 767px) {
          .nav .auth-dropdown form input {
            display: block;
            width: 95%;
            margin: 0 auto 4px auto; } }
        .nav .auth-dropdown form input::placeholder {
          color: #999; }

.auth-dropdown {
  background-color: #dfeeff; }

div.timer {
  font-weight: 700;
  position: absolute;
  right: -117px;
  font-size: 18px;
  margin-top: 5px; }
  @media (max-width: 767px) {
    div.timer {
      position: relative;
      right: 0px;
      float: right; } }

.game-menu {
  margin: 95px 0 41px 0; }
  @media (max-width: 767px) {
    .game-menu {
      margin-top: 33px; 
      width: 100%;
      text-align: center; } }
  .game-menu .item {
    margin-bottom: 5px; }
    @media (max-width: 767px) {
      .game-menu .item {
        display: inline-block;
        margin: 0 10px;
        height: 20px; } }
    .game-menu .item a {
      padding-left: 5px; }

.best-player-icon {
    display: inline-block;
    width: 30px;
    height: 27px;
    background: url("../img/icon-best.png"); }

.best-players {
  width: 200px; }
  .best-players-head {
    height: 53px;
    padding: 13px 13px 0 13px;
    text-transform: uppercase;
    font-weight: 700;
    background-color: #f9d426; }
  .best-players-head span {
    line-height: 1.85; }
  .best-players-body {
    background-color: #fff;
    border-bottom: 2px solid #eee;
    font-weight: 300;
    padding: 13px; }
    .best-players-body .item {
      display: block;
      margin-bottom: 10px; }
      .best-players-body .item .number {
        padding-right: 10px;
      }

.icon {
  width: 20px;
  height: 18px;
  display: inline-block; }
  .icon.timer {
    background: url("../img/icon-timer.png"); }
/* ... */

